# RPI_Anime

./: .gitignore  README.md  README.zh-Hans.md  树莓派私人影音库方案.md  运维首页计划.md
services/ops_ui/: Dockerfile  pyproject.toml
services/ops_ui/src/anime_ops_ui/: __init__.py  copy.py  i18n.py  main.py  navigation.py  page_context.py
services/ops_ui/src/anime_ops_ui/domain/: mobile_models.py
services/ops_ui/src/anime_ops_ui/mobile/: __init__.py  auth.py  routes_auth.py  routes_calendar.py  routes_home.py  routes_items.py  routes_me.py  routes_media.py  routes_review.py  routes_rss.py  routes_system.py
services/ops_ui/src/anime_ops_ui/services/: __init__.py  autobangumi_client.py  (+23 more)
services/ops_ui/tests/: conftest.py  test_autobangumi_client.py  test_contracts.py  test_dashboard_contract.py  test_i18n.py  test_mobile_auth.py  test_mobile_calendar.py  test_mobile_detail.py  test_mobile_home_following.py  test_mobile_me.py  test_mobile_media.py  test_mobile_playback.py  test_mobile_review.py  test_mobile_rss.py  test_mobile_system.py  test_navigation.py  test_repo_hardening.py  test_services.py  test_shell_routes.py  test_weekly_schedule_service.py
services/postprocessor/: Dockerfile  pyproject.toml
services/postprocessor/src/anime_postprocessor/: __init__.py  compatibility.py  eventlog.py  jellyfin_refresh.py  main.py  models.py  parser.py  preprocess.py  publisher.py  qb.py  scanner.py  selector.py  title_map.py  watch.py
services/postprocessor/tests/: test_compatibility.py  test_jellyfin_refresh.py  test_parser.py  test_preprocess.py  test_publish_pipeline.py
(+67 files in other folders)
