[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "anime-ops-ui"
version = "0.1.0"
description = "Custom operations dashboard for the Raspberry Pi anime library"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.116.0",
  "jinja2>=3.1.4",
  "requests>=2.31.0",
  "requests-unixsocket>=0.4.1",
  "uvicorn>=0.35.0",
]

[project.optional-dependencies]
dev = [
  "httpx>=0.27.0",
  "pytest>=8.3.0",
]

[project.scripts]
anime-ops-ui = "anime_ops_ui.main:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
anime_ops_ui = ["static/*", "templates/*"]
