[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "anime-postprocessor"
version = "0.1.0"
description = "Post-processing worker for the Raspberry Pi anime library"
requires-python = ">=3.11"
dependencies = []

[project.scripts]
anime-postprocessor = "anime_postprocessor.main:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
